--- a/src/assets/layout/sidebar/_sidebar-base.scss
+++ b/src/assets/layout/sidebar/_sidebar-base.scss
@@ -72,7 +72,9 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
 .logo-src {
   height: $logo-height;
   width: $logo-width;
-  background: url('./assets/images/logo-inverse.png');
+  background: url('./assets/images/console-logo.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 // Sidebar Menu
