--- a/src/assets/layout/responsive/_responsive-base.scss
+++ b/src/assets/layout/responsive/_responsive-base.scss
@@ -210,7 +210,7 @@
 
   .app-header.text-lighter {
     .logo-src {
-      background: url('./assets/images/console-logo.png');
+      // background: url('./assets/images/console-logo.png');
     }
 
     .app-header__menu {
