--- a/src/assets/pages/_userpages.scss
+++ b/src/assets/pages/_userpages.scss
@@ -9,7 +9,7 @@
 .app-logo-inverse {
   height: $logo-height;
   width: $logo-width;
-  background: url('./assets/images/console-logo.png');
+  // background: url('./assets/images/console-logo.png');
   background-size: cover;
 }
 
